@@ -1,5 +1,10 @@
 2009-10-17  Eric Botcazou  <ebotcazou@adacore.com>
 
+	* gcc-interface/utils2.c (build_binary_op) <ARRAY_RANGE_REF>: Mak
+	sure the element type is consistent.
+
+2009-10-17  Eric Botcazou  <ebotcazou@adacore.com>
+
 	* gcc-interface/trans.c (addressable_p): Handle bitwise operations.
 
 2009-10-16  Eric Botcazou  <ebotcazou@adacore.com>
